--- a/src/components/portfolio/HeroIndex.astro
+++ b/src/components/portfolio/HeroIndex.astro
@@ -10,7 +10,7 @@ const  {
   profileAlt = "Photo of Fernando Aldair López Ponce (EFEELE) for the blog",
   profileLink = "/about-me",
   profileTitle = "FrontEnd Developer",
-  profileName = "Fernando López",
+  profileName = "Rafael Gomez",
   githubLink = "https://github.com/EFEELE/NeonMint",
   githubText = "Do you like this blog's design?",
   portfolioImage = "/images/portfolio.webp",
