comienzo del portafolio

--- a/src/components/portfolio/Tools.astro
+++ b/src/components/portfolio/Tools.astro
@@ -4,30 +4,17 @@ const allTools = [
   "javascript",
   "ts",
   "angular",
-  "astro",
-  
+  "astro",  
   "node",
-
   "css",
   "tailwind",
-  "sass",
   "bootstrap",
-
   "mongo",
   "firebase",
-  "mysql",
-
-  "cloudflare",
-
-  "figma",
-  "vercel",
   "netlify",
-  
-  "git",
-  "markdown",
-
-  "php",
-  "wordpress",
+  "git",  
+  "angular",
+  "python",
 ];
 
 import Capsule from "../ui/Capsule.astro";
