--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -14,8 +14,8 @@ const routes = ["/", "/portfolio", "/about-me", ];
 const isActiveRoute = routes.includes(currentPath);
 
 const navItems = isActiveRoute 
-  ? ["home", "experience", "projects", "about", "blog",]
-  : ["home", "blog", "about"]; // Change the items
+  ? ["home", "experience", "projects", /*"about"*/]
+  : ["home", "experience", "projects", /*"about"*/]; // Change the items
 ---
 
 <header
@@ -26,13 +26,7 @@ const navItems = isActiveRoute
   <div
     class="relative mx-auto flex max-w-7xl flex-row items-center justify-between max-xl:px-6"
   >
-    <a href="/" aria-label="Go to home">
-      <Icon
-        name="logo"
-        class="h-6 cursor-pointer transition-all hover:text-mint-300"
-        aria-hidden="true"
-      />
-    </a>
+    
 
     <Navigation items={navItems} />
 
