--- a/src/components/portfolio/Experience.astro
+++ b/src/components/portfolio/Experience.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import ExperienceItem from "./ExperienceItem.astro";
 import Heading from "../ui/Heading.astro";
 import { Icon } from "astro-icon/components";
@@ -50,4 +50,4 @@ const EXPERIENCE = [
       </ol>
     </div>
   </div>
-</section>
+</section> -->
