--- a/src/components/portfolio/HeroIndex.astro
+++ b/src/components/portfolio/HeroIndex.astro
@@ -68,8 +68,8 @@ const [staticData] = await getCollection('staticData');
             >{staticData.data.profileTitle}</span
           > with <span
             class="bg-linear-to-r from-riptide-500 to-mint-500 bg-clip-text font-black text-transparent  dark:from-riptide-300 dark:to-mint-200"
-            >8 years of experience</span
-          >, passionate about development, technology, and coffee that sparks ideas. I love bringing digital projects to life. 🚀☕
+            >6 months of experience</span
+          >, passionate about development, technology. I love bringing digital projects to life. 🚀☕
         </p>
 
         <div class="flex gap-4 max-sm:flex-col max-sm:items-center">
