--- a/src/components/portfolio/ListProjects.astro
+++ b/src/components/portfolio/ListProjects.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import Project from "./Project.astro";
 import Heading from "../ui/Heading.astro";
 import { Icon } from "astro-icon/components";
@@ -88,4 +88,4 @@ allPosts.sort(
       }, 500);
     }
   });
-</script>
+</script> -->
