--- a/src/components/portfolio/Project.astro
+++ b/src/components/portfolio/Project.astro
@@ -10,7 +10,7 @@ import Capsule from "../ui/Capsule.astro";
       <img class="h-auto rounded-xl transition-all duration-300 ease-in-out group-hover:scale-105" src={image.url} alt={image.alt} />
     </div>
     <div class="flex flex-col p-2">
-      <div class="flex flex-col gap-3 w-full">
+      <!-- <div class="flex flex-col gap-3 w-full">
         <h2 class="text-3xl font-bold text-blacktext dark:text-mint-50">
           {title}
         </h2>
@@ -27,6 +27,6 @@ import Capsule from "../ui/Capsule.astro";
           {description}
         </p>
       </div>
-    </div>
+    </div> -->
   </article>
 </a>
