--- a/src/components/portfolio/Hobbies.astro
+++ b/src/components/portfolio/Hobbies.astro
@@ -3,9 +3,10 @@ import { getCollection } from "astro:content";
 import Hobbie from "./Hobbie.astro";
 
 const [staticData] = await getCollection("staticData");
+const { hobbies } = staticData.data;
 
 interface Props {
-    variant?: 'default' | 'vertical';
+    variant?: "default" | "vertical";
 }
 
 const baseClasses = "max-w-7xl gap-3 py-4 max-md:py-3";
@@ -20,5 +21,5 @@ const classes = variants[variant];
 ---
 
 <div id="tags" class={classes}>
-    {staticData.data.hobbies.map((hobby) => <Hobbie tag={hobby} />)}
+    {hobbies.map((hobby) => <Hobbie tag={hobby} />)}
 </div>
