80% del portafolio terminado

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,10 +14,10 @@ const {
 
 const siteUrl = new URL(Astro.url).origin;
 const SEO = {
-  sitename: "NeonMint by EFEELE🚀",
+  sitename: "FREE AGENTS",
   url: siteUrl,
   locale: "en_US",
-  author: "Fernando Lopez | EFEELE",
+  author: "David Solorza | FREE AGENTS",
   twitter: "@efeeledev",
 };
 
