--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -14,8 +14,8 @@ const routes = ["/", "/portfolio", "/about-me", ];
 const isActiveRoute = routes.includes(currentPath);
 
 const navItems = isActiveRoute 
-  ? ["home", "experience", "projects", /*"about"*/]
-  : ["home", "experience", "projects", /*"about"*/]; // Change the items
+  ? ["home", "experience", "projects", "about"]
+  : ["home", "experience", "projects", "about"]; // Change the items
 ---
 
 <header
