--- a/src/layouts/MarkdownAbout.astro
+++ b/src/layouts/MarkdownAbout.astro
@@ -44,8 +44,8 @@ const { frontmatter } = Astro.props;
               </div>
               <div class="relative z-20 flex w-full rounded-full bg-mint-900">
                 <div
-                  class="w-full aspect-square rounded-full bg-[url(/images/efeeleprofile.webp)] bg-center bg-cover"
-                  aria-label="Photo of Fernando Aldair López Ponce (EFEELE) for the blog"
+                  class="w-full aspect-square rounded-full bg-[url(/images/perfil.png)] bg-center bg-cover"
+                  aria-label="Photo of David Solorza for the portfolio"
                 >
                   <a
                     href="/about-me"
@@ -58,7 +58,7 @@ const { frontmatter } = Astro.props;
 
           <div class="w-full flex flex-col justify-center gap-4 max-md:gap-2">
             <div class="text-center">
-              <Heading textGradient="Fernando López | EFEELE" />
+              <Heading textGradient="David Solorza | FREEAGENTS" />
             </div>
 
             <p
@@ -69,9 +69,8 @@ const { frontmatter } = Astro.props;
                 >Frontend Developer</b
               > with <b
                 class="bg-linear-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >8 years of experience</b
-              >, passionate about development, technology, and coffee that
-              sparks ideas. I love bringing digital projects to life. 🚀☕
+                >6 months of experience</b
+              >, passionate about development, technology. I love bringing digital projects to life. 🚀☕
             </p>
           </div>
         </div>
