--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Experience from "../components/portfolio/Experience.astro";
 import HeroIndex from "../components/portfolio/HeroIndex.astro";
 import Contact from "../components/portfolio/Contact.astro";
-import ListProjects from "../components/portfolio/ListProjects.astro";
-const pageTitle = "NeonMint by | Fernando Lopez | EFEELE ";
-const description = "Is a modern, minimalist template crafted for developers and digital creatives.";
+
+const pageTitle = "NeonMint by David Solorza | Frontend Developer";
+const description = "Modern, minimalist portfolio template crafted for developers and digital creatives.";
 const ogimage = {
   url: "/images/imagedefault.webp",
-  alt: "Screenshot of a web portfolio with a modern and dark design. Featuring Fernando López, a Frontend Developer with 8 years of experience, highlighting his passion for development and technology. Includes contact sections, projects, and a technology stack with technologies like HTML5, JavaScript, TypeScript, Angular, Node.js, CSS, Tailwind, and more.",
+  alt: "Screenshot of a web portfolio with a modern and dark design. Featuring David Solorza, a Frontend Developer with experience in modern web technologies.",
 };
 ---
 
 <Layout pageTitle={pageTitle} description={description} ogimage={ogimage}>
   <HeroIndex />
-  <Experience />
-  <ListProjects />
   <Contact />
 </Layout>
