--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -12,7 +12,7 @@ const menu = {
   about: { name: "About Me", path: "/about-me" },
   home: { name: "Home", path: "/#home" },
   experience: { name: "Experience", path: "/#experience" },
-  projects: { name: "Projects", path: "/#projects" },
+  projects: { name: "Proyectos", path: "/#projects" },
 };
 
 // Common base classes
