--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,7 +7,7 @@ import { getCollection} from "astro:content";
 
 const [staticData] = await getCollection('staticData');
 
-const navItems = ["home", "experience", "projects", "about"];
+const navItems = ["home", "experience", "projects", "contact", "about"];
 ---
 
 <header
