--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -13,6 +13,7 @@ const menu = {
   home: { name: "Home", path: "/#home" },
   experience: { name: "Experience", path: "/#experience" },
   projects: { name: "Proyectos", path: "/#projects" },
+  contact: { name: "Contacto", path: "/#contact" },
 };
 
 // Common base classes
