--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,7 +71,7 @@ const twitterimage = `${siteUrl}${ogimage.url}`;
     <!-- Sitemap -->
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
-  
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <body class="overflow-x-hidden">
     <div class="blur-circle"></div>
     <div
